--- a/angular.json
+++ b/angular.json
@@ -72,7 +72,10 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css","node_modules/video.js/dist/video-js.css"],
+            "styles": [
+              "node_modules/video.js/dist/video-js.min.css",
+              "src/styles.css"
+            ],
             "scripts": ["node_modules/video.js/dist/video.js"]
           }
         }
