--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,10 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/assets"],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "src/styles.css",
+              "node_modules/video.js/dist/video-js.css"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -71,10 +74,6 @@
                 "glob": "**/*",
                 "input": "public"
               }
-            ],
-            "styles": [
-              "node_modules/video.js/dist/video-js.min.css",
-              "src/styles.css"
             ],
             "scripts": ["node_modules/video.js/dist/video.js"]
           }
